--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "html-react-parser": "^3.0.12",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-icons-kit": "^2.0.0",
